# n_be

./: .env.backup  .env.backup_20251011_233739  .env.bak  .env.bak3  .env.example  .env.example.formbricks  .env.migrate_backup  .gitignore  .gitmodules  CHAT_SETUP.md  DEVELOPMENT.md  Development.md  Dockerfile  Dockerfile.dev  Dockerfile.production  PROCUREMENT_API_DOCUMENTATION.md  PROPOSALS_DB_CHECK.md  README.md  README_SEEDING.md  README_SEED_EMPLOYEES.md  README_SEED_ROLES_DEPARTMENTS.md  RUN_CHAT_MIGRATION.md  RUN_MIGRATION.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  VENDOR_EMAIL_SETUP.md  add_approval_columns.sql  add_created_by_to_accounts.sql  add_name_column.sql  add_org_to_staff_plans.sql  add_profile_fields.sql  add_updated_by_to_accounts.sql  add_user_profile_fields.sql  add_username_to_users.sql  alembic.ini  check_account_documents.sql  check_proposals_db.py  check_vendor_org.py  create_account_team_table.sql  create_opportunity_tables.sql  (+44 more)
.cursor/rules/: ai.mdc  core.mdc  dev-flow.mdc  how-to.mdc  review.mdc
.github/: copilot-instructions.md  pr-reviewer-checklist.md
.github/workflows/: db-migrate.yml  preview-db.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_opportunity_tabs.py  00e45db1a28a_add_cascade_delete_to_users_.py  07da41c7db8d_merge_user_permissions_and_notes_table_.py  090f6d18782e_user_role_table_creation_2.py  0d32e3791e12_merge_variance_explanations_with_vendor_.py  107b6416b56c_add_account_documents_table.py  15a46ec27bb8_add_vendor_fields_payment_terms_tax_id_.py  20240115_100000_add_custom_id_fields.py  20241110_add_escalation_fields_to_staff_allocations.py  20250115_add_proposal_type_field.py  20250127_add_organization_logo_url.py  20250127_add_user_profile_picture_url.py  20250128_add_budget_approvals_table.py  20250128_add_contracts_module.py  20250129_add_variance_explanations.py  20250131_fix_contract_risk_level_enum.py  20251106_add_timestamps_to_contacts.py  20251111_add_delivery_model_templates.py  20251112_add_proposals_module.py  20251113_add_opportunity_ingestion_tables.py  20251127_add_chat_tables.py  20251202_add_notifications_table.py  20251202_add_opportunity_filter_presets.py  20251203_add_departments_table.py  20251203_add_roles_table.py  20251206_add_attendance_table.py  21c72d6b7d1a_add_accounts_address_and_contacts_tables.py  247287955082_add_missing_ai_health_scoring_fields.py  269154e6abcb_rename_orgs_to_organization_and_update_.py  27y2jabi8qf1_add_approval_status_and_notes.py  2d73d73eb79e_create_users_table.py  312564f1bf0a_fix_opportunities_column_type_to_integer.py  34f372e002b6_add_missing_vendors_and_audit_tables.py  3df021b7005c_create_opportunities_table_v2.py  3fb179632ef5_create_orgs_table.py  406dbe169215_merge_employee_branches.py  41bfcd6801ca_merge_opportunity_tabs_and_custom_id_.py  4288e8217bf0_added_city_field_in_addresses.py  43c59cc3b8a3_add_vendor_qualifications_table.py  4639c8c5af9a_fix_account_address_contact_.py  (+49 more)
app/: __init__.py  environment.py  main.py  router.py
app/constant/: get_current_user.py
app/core/: roles.py
app/db/: session.py
app/dependencies/: permissions.py  user_auth.py
app/middlewares/: __init__.py  audit_logging.py  brute_force_protection.py  db_session.py  file_upload_security.py  input_validation.py  ip_filtering.py  rate_limit.py  request_size_limit.py  request_transaction.py  security_headers.py
app/models/: __init__.py  account.py  account_audit.py  account_document.py  account_note.py  account_team.py  address.py  ai_agentic.py  attendance.py  candidate.py  chat.py  contact.py  contract.py  delivery_model_template.py  department.py  employee.py  expense_category.py  export.py  finance_planning.py  formbricks_projects.py  invite.py  note.py  notification.py  opportunity.py  opportunity_document.py  opportunity_filter_preset.py  opportunity_source.py  opportunity_tabs.py  organization.py  orgs.py  password_reset.py  procurement.py  procurement_budget.py  proposal.py  role.py  staff_planning.py  survey.py  user.py  user_permission.py  vendor.py
app/rbac/: permissions.py
app/routes/: __init__.py  account.py  account.py.backup  account_document.py  (+49 more)
client/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/: DELIVERY_TRACKING_GUIDE.md  ROLE_SYSTEM_DOCUMENTATION.md  VENDOR_SYSTEMS_DOCUMENTATION.md
scripts/: create_jwt_test.py  create_neon_preview.py  create_org.py  create_project_in_org.py  create_survey_link.py  create_user_in_org.py  seed_accounts.py  seed_user.py  seed_user_db.py
tests/: conftest.py  test_root.py
(+215 files in other folders)
