[project]
name = "megapolis-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishabh",email = "rishabhgautam727@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.30.6,<0.31.0)",
    "SQLAlchemy (>=2.0.32,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "alembic (>=1.13.2,<2.0.0)",
    "typer (>=0.12.3,<0.13.0)",
    "click (>=8.1.3,<8.2.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "supabase (>=2.18.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "loguru (>=0.7.2,<0.8.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "aiosmtplib (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]
